--- a/tex/main/04-nonlinear-perturbations.tex
+++ b/tex/main/04-nonlinear-perturbations.tex
@@ -679,14 +679,14 @@ There are several questions:
 	\item What is the nature of this relaxed state?
 \end{itemize}
 
-\emph{Relaxation} is the process by which a system reaches thermodynamic equilibrium. In a gas, collisions are very efficient, and quickly drive the gas to thermodynamic equilibrium.
+\emph{Relaxation} is the process by which a system reaches thermodynamic equilibrium. In a gas, collisions are very efficient, and quickly drive the gas to thermodynamic equilibrium.\\
 For self-gravitating collisionless systems, the situation is much more complicated, because collisions are very inefficient, and they do not drive the system to a relaxed state.
 Still, many relaxed systems are observed in astrophysics, such as many galaxies, galaxy clusters, and globular clusters.
 If not collisions, then what has driven the system to a relaxed state?
 
 \subsection{Processes}
 
-There are several processes which are responsible for relaxation.
+There are several processes which are responsible for the collisionless relaxation.
 
 \paragraph{Phase mixing.}
 Even for perfectly regular orbits, the trajectories in phase space diverge slowly in time, because the fundamental frequencies of different orbits are not the same.
@@ -694,11 +694,11 @@ Particles in nearby phase-space regions with slightly different velocities can g
 Their orbits get sheared and eventually fill the whole phase space volume, which leads to a new steady state distribution.
 
 \paragraph{Chaotic mixing.}
-For chaotic orbits, the trajectories diverge exponentially in time.
+For chaotic orbits, the trajectories diverge exponentially in time. They also end up filling the phase space.
 Chaotic mixing is more efficient at large scales, so this process mostly relaxes the coarse-grained distribution function.
 
 \paragraph{Violent relaxation.}
-If the (smoothed) potential of the system changes quickly, such as during a merger or mass loss, the velocity distribution of a system can be broadened.
+If the (smoothed) potential of the system changes quickly, such as during a merger or mass loss, the velocity distribution of a system is broadened.
 The time scale for this process is small, which is why it is called violent.
 
 \paragraph{Landau damping.}
@@ -713,7 +713,7 @@ Is it a thermal equilibrium?
 
 In a very broad sense, thermal equilibrium is a state which maximizes the entropy, which is also the most probable state.
 
-This is not applicable here, as it turns out there is no satisfactory definition of entropy for our systems,
+This is not applicable here, as it turns out there is no satisfactory definition of entropy for these systems,
 % attempt to use Boltzmann-H function in book, but it fails
 % weird that something as simple as Newton's law defies entropy ...
 and it is not clear whether the relaxed states we introduced previously are the most probable states.
