--- a/tex/main/04-nonlinear-perturbations.tex
+++ b/tex/main/04-nonlinear-perturbations.tex
@@ -1007,7 +1007,7 @@ On linear (large) scales, one can show with the EPS-approach that
 	\delta_h(\vec{x}, t)
 	&= b_h(M, t) \delta(\vec{x}, t),
 \end{align*}
-where $b_h$ is a constant, called the \emph{halo bias},
+where $b_h$ is called the \emph{halo bias},
 and $\delta$ is the matter overdensity.
 The halo bias can be derived to be
 \begin{align*}
@@ -1024,7 +1024,7 @@ where we remember $\nu = \delta_c(t) / \sigma(M)$.
 \end{marginfigure}
 
 The model is compared with simulations in \cref{fig:halo-bias}.
-The dashed line is the spherical-collapse EPS model, and the solid line is a model that also includes non-spherical collapse.
+The dashed line is the spherical-collapse EPS model, and the solid line is a model that also includes elliptical collapse.
 Once again, we see that spherical collapse gives us the right trend, but introducing elliptical collapse yields a much better agreement with simulations.
 
 % TODO? figure other fitting functions   Seljak & Warren 2004
@@ -1041,7 +1041,7 @@ Consider a more general bias model:
 \begin{align*}
 	\delta_h(\vec{x}, t)
 	&= 
-	b_h(M, t, \delta) \delta(\vec{x})
+	b_h(M, t, \delta) \delta(\vec{x},t)
 	+ \epsilon(\vec{x}) 
 \end{align*}
 where $b_h(\dots, \delta)$ leads to non-linear dependence on the bias, and $\epsilon$ describes the scatter between the halo contrast and the density contrast.
@@ -1049,7 +1049,7 @@ where $b_h(\dots, \delta)$ leads to non-linear dependence on the bias, and $\eps
 \paragraph*{Assembly bias.}
 The bias may also depend on other halo properties, such as the concentration of the halo or its spin.
 An important dependence is on the halo formation history.
-It is found that haloes with early assembly times are more strongly clustered at a given mass and time. This is called \emph{assembly bias}.
+It is found that haloes with early assembly times $t_a$ are more strongly clustered for a given mass and time. This is called \emph{assembly bias}.
 
 
 
