--- a/tex/main/04-nonlinear-perturbations.tex
+++ b/tex/main/04-nonlinear-perturbations.tex
@@ -1104,7 +1104,7 @@ Notes:
 
 \subsection{Shape}
 Generally, haloes are not spherical, but elliptical.
-Let $a_1 \geq a_2 \geq a_3$ be the main axes of the ellipsoid, and let $s = a_3/a_1$, which is a measure of flattening of the halo.
+Let $a_1 \geq a_2 \geq a_3$ be the main axes of the ellipsoid and let's define $s = a_3/a_1$, which is a measure of flattening of the halo.
 
 If $s = 1$, we are looking at a sphere, and $s=0$ is a perfectly flat two-dimensional pancake.
 In simulations, the following trends have been found:
@@ -1144,7 +1144,7 @@ where $\gamma \approx 0.9$, $\beta \in [0.1, 0.5]$, and
 \begin{align*}
 	f_0
 	= \frac{1}{M}
-	\int m \dv{M}{m} \dd{m}.
+	\int m \dv{n}{m} \dd{m}.
 \end{align*}
 The quantity $f_0$ is called the \emph{mean subhalo mass fraction}, and it is the fraction of the main halo mass that is made up of subhaoles.
 
