--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -11,7 +11,7 @@ Before recombination and decoupling, the baryons were an ionized plasma.
 
 After recombination, they are mostly neutral and in atomic form. At that point, there is little emission, which is why this period is called the Dark Ages.
 
-At later times ($z \approx 6$ -- $20$), the first stars start to form, which emit UV photons that re-ionize the baryons and end the Dark Ages. This is called the Epoch of Reionization (EoR).
+At later times ($z \approx 6$ -- $20$), the first astrophysical objects start to form (like stars, galaxies, etc.), which emit UV photons that re-ionize the baryons and end the Dark Ages. This is called the Epoch of Reionization (EoR).
 
 Following this, the baryons continue to participate in structure formation, driven by dark matter.
 
@@ -64,7 +64,7 @@ Figure \ref{fig:illustris-evolution} shows the evolution of dark matter and ordi
 	\label{fig:illustris-evolution}
 \end{figure}
 
-Generally, some baryons tend to sink to the bottom of potential wells, driven by dark matter on small scales, because baryons have dissipation.
+Generally, some baryons tend to sink to the bottom of potential wells driven by dark matter on small scales, because baryons have dissipation.
 
 Our approach here is to first review astrophyiscal facts about baryonic structures and discuss approaches for modelling the baryons.
 
