--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -98,8 +98,8 @@ The solar composition is shown in \cref{tab:solar-comp}.
 For comparison, the primordial abundance is about \SI{75}{\percent} hydrogen and \SI{25}{\percent} helium, with only traces of heavier elements.
 Apparently, the abundance of helium and heavier elements in the sun is different from the primordial abundance.
 This is because heavier elements are produced by nuclear reactions in stars.
-To characterize these abundances, we define the \emph{metallicity} $z$, which is the mass faction of elements heavier than helium.
-For the sun, $z_\sol \approx \SI{2}{\percent}$.
+To characterize these abundances, we define the \emph{metallicity} $Z$, which is the mass faction of elements heavier than helium.
+For the sun, $Z_\sol \approx \SI{2}{\percent}$.
 
 Stellar types are classified based on their surface temperature, which is shown in TODO.
 The spectra of different types are shown in TODO.
@@ -126,7 +126,7 @@ The spectra of different types are shown in TODO.
 The modern classification system for stars is the MK classification, which consists of a spectral classification and a luminosity classification.
 
 The spectral classification is a single letter for rough classification, followed optionally by a single number for finer classification.
-\Cref{tab:spectral-type} shows the temperature of stars with different spectral types.
+\Cref{tab:spectral-type} shows the temperature of stars with different spectral types. The mass of a star depends on its temperature. The hotter a star is, the more massive it is. 
 
 \subsection{Hertzsprung-Russel diagram}
 
