--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -174,10 +174,10 @@ The Hubble sequence distinguishes the following types:
 	\item Elliptical galaxies have a smooth elliptical light distribution. They are subdivided into E0 (spherical) to E7 (very flat).
 	\item Spiral galaxies have a disk with spiral arms, and a central halo.
 	\begin{itemize}
-		\item Normal spiral galaxies go from Sa (tight spiral) to Sc (loose spiral).
-		\item Barred spiral galaxies go from SBa (tight spiral) to SBc (loose spiral).
+		\item Normal spiral galaxies go from Sa (tight spiral and relatively faint HII regions) to Sc (loose spiral and bright HII regions).
+		\item Barred spiral galaxies go from SBa (tight spiral and relatively faint HII regions) to SBc (loose spiral and bright HII regions).
 	\end{itemize}
-	\item Lenticular galaxies (S0) are an intermediate step between ellipticals and spirals.
+	\item Lenticular galaxies (S0) are an intermediate step between ellipticals and spirals. They have a smooth light distribution with no spiral arms and a thin disk with a bulge. 
 \end{itemize}
 There are also other types of galaxies which are not on the Hubble sequence:
 \begin{itemize}
