--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -202,7 +202,7 @@ The surface brightness of elliptical galaxies is well fit by a \emph{Sérsic pro
 	I(R)
 	&= I_0 \exp\Bigg[ - \beta_n \left( \frac{R}{R_e}  \right)^{1/n} \Bigg],
 \end{align*}
-where $m$ is the Sérsic index,
+where $n$ is the Sérsic index,
 $R$ is the semi-major axis length,
 $R_e$ is the half-light radius,
 and it follows that $\beta_n \approx 2 n - 0.324$ to fulfill this criterion.
@@ -231,17 +231,17 @@ The rotational velocities are comparatively small.
 \end{marginfigure}
 There is a correlation between some of the main characteristics of ellipticals.
 Let $\sigma$ be the line of sight velocity dispersion of stars inside the half-light radius $R_e$,
-and let $\avg{I}_l$ be the main surface brightness within $R_e$.
-\Cref{fig:fundamental-plane} shows the \emph{fundamental plane}, which which quantifies the correlation between these parameters.
-The correlation between $\avg{I_l}$ and $\sigma$ is called \emph{Faber-Jackson relation}.
+and let $\avg{I}_e$ be the main surface brightness within $R_e$.
+\Cref{fig:fundamental-plane} shows the \emph{fundamental plane}, which quantifies the correlation between these parameters.
+The correlation between $\avg{I}_e$ and $\sigma$ is called \emph{Faber-Jackson relation}.
 The correlation between $R_e$ and $\sigma$ is called the \emph{$D_n$-$\sigma$ relation}, whose name comes from an other measure for radius, $D_n$.
 
 
 \subsection{Gas content}
 Very little cold gas, with temperatures less than \SI{100}{\kelvin}, is contained in ellipticals.
 As a result, new stars are not forming, which explains the old stellar population.
-Hot gas with temperatures around \SI{e7}{\kelvin} is much more abundant, and can be found with x-ray observations.
-There is also a little warm gas, with temperature \SI{e4}{\kelvin}.
+Hot gas with temperatures around \SI{e7}{\kelvin} is much more abundant, and can be found with X-ray observations.
+There is also a little warm gas, with temperatures around \SI{e4}{\kelvin}.
 
 
 
