--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -266,7 +266,7 @@ The disks of spiral galaxies are well fitted by an exponential profile,
 \end{align*}
 which is a Sérsic profile with Sérsic index $n=1$,
 and $R_e \approx 1.67 R_d$.
-More luminous spirals usually have larger radii.
+More luminous spirals usually have larger radii $R_e$.
 Bulges are also well fitted by a Sérsic profile, with $n = 4$ for large bulges, down to $n=1$ for smaller ones.
 
 \subsection{Colour}
@@ -285,7 +285,7 @@ Spirals have mostly cold gas in the disk, which gives them a reservoir for star 
 \subsection{Kinematics}
 \begin{marginfigure}
 	\includegraphics[width=\textwidth]{img/ch-05/rotation-curve.png}
-	\caption{The rotation curve of the galaxy NGC 3198. The rotation curve is the result of a contribution from baryonic matter in the disk and a dark matter halo, which extends beyond the disk. The baryonic matter is on average closer to the centre of the galaxy, because unlike dark matter, it can lose energy by dissipation.}
+	\caption{The rotation curve of the galaxy NGC 3198. The rotation curve is the result of a contribution from baryonic matter in the disk and a dark matter halo, which extends beyond the disk. The baryonic matter is on average closer to the centre of the galaxy, because unlike dark matter, it can loose energy by dissipation.}
 	\label{fig:rotation-curve}
 \end{marginfigure}
 The disks in spirals are rotationally supported, with approximately circular orbits for stars and gas.
