--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -313,11 +313,17 @@ which is called the \emph{Tully-Fisher relation}.
 
 \section{Dwarf galaxies}
 Dwarf galaxies are galaxies with low luminosities, such that $M_B \geq - 18$.
-\Cref{fig:dwarfs} shows that they can have diverse structures, and they can be separated into different subtypes.
+\Cref{fig:dwarfs} shows that they can have diverse structures, and therefore they can be separated into different subtypes.
 \begin{itemize}
 	\item Dwarf galaxies that are gas rich, show strong star formation, and have irregular shapes are called \emph{Dwarf irregulars}, dIrr.
 	\item Dwarf galaxies that are gas poor, without young stars, and with regular structures, are subdivided into \emph{Dwarf ellipticals}, dE, and the fainter Dwarf spheroidals, dSph.
 \end{itemize}
+
+\begin{figure}
+	\includegraphics[width=\textwidth]{img/ch-05/dwarfs.PNG}
+	\caption{Two examples for dwarf galaxies, which have completely different structures. The galaxy on the left is a typical dwarf irregular and the one on the right is a dwarf spheroidal.}
+	\label{fig:dwarfs}
+\end{figure}
 
 
 \section{Active galactic nuclei}
