--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -356,7 +356,7 @@ For a wide range of galaxies, a \emph{Schechter function} is a good fit:
 	\frac{\dd{L}}{L^*},
 \end{align*}
 where
-$L^*$ is a characteristic luminosity,
+$L^*$ is the characteristic luminosity,
 $\alpha$ is the faint end slope,
 and $\phi^*$ is a normalization factor.
 In \cref{fig:lum-func}, the luminosity function has been fitted to experimental data.
@@ -382,8 +382,8 @@ Spiral galaxies with large total stellar masses $M_*$ tend to have higher metali
 
 \subsection{Clustering}
 Galaxies in denser regions are redder.
-Equivalently, elliptical galaxies are more clustered than spiral galaxies.
-The fraction of different kinds of galaxies is shown as a function of density in \cref{fig:clustering}
+Therefore, elliptical galaxies are more clustered than spiral galaxies.
+The fraction of different kinds of galaxies is shown as a function of surface density in \cref{fig:clustering}
 \begin{marginfigure}
 	\includegraphics[width=\textwidth]{img/ch-05/clustering.pdf}
 	\caption{The fraction of galaxies as a function of morphological density for the D80 55 cluster sample, from \cite{Dressler_1997}.}
