--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -404,7 +404,7 @@ Galaxy clusters are the largest bound objects in the universe.
 	\item Number of galaxies: 50 to a few thousand
 	\item Radius: a few \si{\mega\parsec}
 	\item Mass: \SIrange{e14}{e15}{\solarmass}
-	\item Velocity dispersion (line of sight): $\sigma_\text{los} \approx \SI{1000}{\kilo\metre\per\second}$
+	\item Velocity dispersion (along the line of sight): $\sigma_\text{los} \approx \SI{1000}{\kilo\metre\per\second}$
 \end{itemize}
 
 Criteria for selecting clusters:
@@ -416,7 +416,7 @@ Criteria for selecting clusters:
 
 An example of a survey is the Abell cluster catalogue from 1958.
 
-Nearby clusters are Virgo and Coma.
+Nearby clusters are the Virgo and the Coma cluster.
 
 \paragraph*{Galaxy population}
 Clusters are rich in early type (red, elliptical) galaxies.
@@ -424,7 +424,7 @@ For regular clusters, \SI{80}{\percent} of galaxies are E or S0, which is higher
 
 The fraction of red galaxies tends to decrease in clusters with increasing redshift, which is known as the \emph{Butcher-Oemler effect}.
 
-The radial density of galaxies in clusters is similar to the distribution of dark matter, which indicates that the galaxies act as collisionless particles.
+The radial density of galaxies in clusters is similar to the distribution of dark matter, which indicates that the galaxies act as collisionless particles and that the density can also be described by the NFW profile.
 
 Often, the brightest galaxy in a cluster is very extended, diffuse, and near the centre. They are called cD galaxies, and are thought to have grown through the accretion of multiple galaxies.
 The effect is called \emph{galaxy cannibalism}.
@@ -449,7 +449,7 @@ There are several techniques to measure the mass of a cluster:
 \end{itemize}
 
 One finds that the mass of clusters is in the range \SIrange{e14}{e15}{\solarmass}.
-Also, only \SI{10}{\percent} of the mass is baryonic in nature, which is strong evidence for the existence of dark matter.
+Also, only \SI{10}{\percent} of the mass is baryonic in nature, which is a strong evidence for the existence of dark matter.
 
 
 
